# smart_mobility_labs

./: README.md  week3.sh  week4.sh
Midterm/: README.md
Midterm/action_fleet_interfaces/: CMakeLists.txt  package.xml
Midterm/action_fleet_interfaces/action/: FleetManagement.action
Midterm/fleet_action_py/: package.xml  setup.cfg  setup.py
Midterm/fleet_action_py/fleet_action_py/: fleet_management_client_cli.py  fleet_management_server_cli.py
Week 3/: week3.sh
Week 4/: README.md
Week 5/: README.md  week5.sh
Week 6/: README.md  week6.sh
Week 7/: Navigate2D.action  README.md  action_client.py  action_server.py  robot_control_action_client.py  robot_control_action_server.py  robot_point_publisher.py
